--- a/counter/index.html
+++ b/counter/index.html
@@ -15,7 +15,7 @@
         margin-bottom: 10px;
       }
     </style>
-    <title>Vite + React + TS</title>
+    <title>Counter</title>
   </head>
   <body>
     <div id="root"></div>
