--- a/tailwindProps/index.html
+++ b/tailwindProps/index.html
@@ -10,7 +10,7 @@
         color: white;
       }
     </style>
-    <title>Vite + React + TS</title>
+    <title>Tailwind CSS + Props</title>
   </head>
   <body>
     <div id="root"></div>
