--- a/Food_Recipe/index.html
+++ b/Food_Recipe/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Food Recipes</title>
   </head>
-  <body class="bg-gray-400 p-10">
+  <body class="p-10 bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
